--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <title>tek İddaa İddaa Betin siteleri oyna İddaa canlı canlı maç</title>
 <meta name="author" content="tek İddaa İddaa Betin siteleri oyna İddaa canlı canlı maç">
 <link rel="canonical" href="https://rmud.tropicale.pl/">
-<link href="./css/111.css" rel="preload stylesheet" as="style">
+<link href="./css" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://adityatelange.github.io/hugo-PaperMod/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://adityatelange.github.io/hugo-PaperMod/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://adityatelange.github.io/hugo-PaperMod/favicon-32x32.png">
