--- a/bJRiPKVghg.html
+++ b/bJRiPKVghg.html
@@ -66,7 +66,7 @@
  id="ilxelxtqy-26561" class="fuzvxzoip"><sup
  id="llrxbpfth-12724" class="gpxnlapyj"><sup
  style="padding: 29px 28px 26px 18px; background: rgb(201, 219, 218) none repeat scroll 0%; -moz-background-clip: initial; -moz-background-origin: initial; -moz-background-inline-policy: initial; line-height: 43px; display: block; font-size: 22px;">  <div>  <div>
-     <img src="file://D:/bas_doors/my_doors/rencontre/img/bJRiPKVghg.jpg" alt="100 rencontre" />
+     <img src="/img/bJRiPKVghg.jpg" alt="100 rencontre" />
 <h2>How to play Free Fire on PC Best settings keymapping and more August 2022</h2>
 
 <p>If you're a big fan of the popular mobile battle royale game, Free Fire, you may have wondered if there's a way to play it on your PC.The good news is that there are several emulators out there that allow you to do just that.By playing Free Fire on your PC, you can enjoy the game on a larger screen and with better controls.In this blog post, we'll introduce you to Free Fire on PC, guide you through keymapping and settings for optimal gameplay, and provide you with a list of the best emulators to use.</p><p>So, let's dive in!</p><h2>Introduction to Free Fire on PC</h2><p>Free Fire is a popular Battle Royale game known for its fast-paced gameplay and dynamic mechanics.</p><p>Originally developed for mobile devices, it has gained enormous popularity and a massive fan base worldwide.Now, with the help of emulators, it is possible to enjoy this game on PC.</p>
